tests/lean/689.lean.expected.out
689.lean:4:0: error: expected '|'
689.lean:9:0: error: unexpected end of input; expected '{'
